- done with basic runtime types and operators - doing tests